--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,41 +12,41 @@
       </div>
 
       <div class="form-group">
-        <label for="lastName">Last name:
+        <label for="lastName">Last Name:
           <input type="text" name="lastName" value="" class="form-control" formControlName="lastName">
         </label>
       </div>
-  
+
       <div class="form-group">
         <label for="userName">Username:
           <input type="text" name="userName" value="" class="form-control" formControlName="userName">
         </label>
       </div>
-  
+
       <div class="form-group">
         <label for="email">E-mail:
-          <input type="email" name="email" value=""  class="form-control" formControlName="email">
+          <input type="email" name="email" value="" class="form-control" formControlName="email">
         </label>
       </div>
-  
-  
+
+
       <div class="form-group">
         <label for="password">Password:
-          <input type="password" name="password" value=""  class="form-control" formControlName="password">
+          <input type="password" name="password" value="" class="form-control" formControlName="password">
         </label>
       </div>
 
       <div class="form-group">
-          <label for="userType">User Type:
-            <select class="form-control" formControlName="userType">
-              <option value="artist" selected>Artist</option>
-              <option value="user">User</option>
-            </select>
-          </label>
+        <label for="userType">User Type:
+          <select class="form-control" formControlName="userType">
+            <option value="artist">Artist</option>
+            <option value="customer" [selected]="true">Customer</option>
+          </select>
+        </label>
       </div>
-  
-      <button type="submit"  class = "btn btn-submit" name="button" [disabled]="!signupForm.valid">Sign Up</button>
-  
+
+      <button type="submit" class="btn btn-submit" name="button" [disabled]="!signupForm.valid">Sign Up</button>
+
     </form>
 
   </div>
