--- a/src/styles.css
+++ b/src/styles.css
@@ -489,4 +489,13 @@ ul.cart-list > li.total > .btn:focus{
   width: 100%;
   height: 85px;
 }
+.login-form{
+  background: #ffffff;
+  padding: 30px 30px 20px;
+  border-radius: 2px;
+}
+.login-content{
+  max-width: 540px;
+  margin: 8vh auto;
+}
 
