--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -22,6 +22,11 @@
               <div class="col col-md-4"><label for="role" class=" form-control-label">Role:</label></div>
               <div class="col-12 col-md-8">  <input type="text" name="role" value="" class="form-control" formControlName="role"></div>
             </div>
+            <div class="row form-group">
+              <div class="col col-md-4"><label for="bio" class=" form-control-label">Bio:</label></div>
+              <div class="col-12 col-md-8">  <input type="text" name="bio" value="" class="form-control" formControlName="bio"></div>
+            </div>
+      
     
           <div class="row form-group">
             <div class="col col-md-4"><label for="cv" class=" form-control-label">Upload CV:</label></div>
