--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,15 @@
       </label>
     </div>
 
+    <div class="form-group">
+      <label for="userType">User Type:
+        <select class="form-control" formControlName="userType">
+          <option value="Artist">Artist</option>
+          <option value="Customer" [selected]="true">Customer</option>
+        </select>
+      </label>
+    </div>
+
     <button type="submit"  class = "btn btn-submit" name="button">Login</button>
   </form>
 </div>
