routing queryparams added

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -36,8 +36,8 @@
           <div class="form-group">
             <label for="userType">User Type:
               <select class="form-control" formControlName="userType">
-                <option value="Artist">Artist</option>
-                <option value="Customer" [selected]="true">Customer</option>
+                <option value="artist">Artist</option>
+                <option value="customer" [selected]="true">Customer</option>
               </select>
             </label>
           </div>
