--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -29,7 +29,7 @@
 
           <div class="form-group">
             <label for="phoneNumber">Phone Number:
-              <input type="text" name="phoneNumber" value="" class="form-control" formControlName="Phone">
+              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone">
             </label>
           </div>
     
