--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,10 @@
 .bg-light{
     background-color: white !important;
 }
+.navbar{
+    margin-bottom: 0px;
+}
+.navbar-brand{
+    margin: 0;
+    padding: 0;
+}
