--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#"><img src="./assets/images/brand/opus.jpg"  style="width:145px; height:59px; "class="logo" alt="Opus "></a>
+    <a class="navbar-brand" href="#"><img src="./assets/images/brand/opus.jpg"  style="width:145px; height:59px; overflow: hidden !important;"class="logo" alt="Opus "></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
