--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,34 @@
-<div class="fixed-menu">
-</div>
-<div class="container">
-  <form class="" [formGroup] = "signinForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="email">Email:
-        <input type="email" name="email"  class="form-control" value="" formControlName="email">
-      </label>
+<div class="login-content">
+    <div class="card">
+        <div class="card-header">
+            <strong>Login</strong>
+          </div>
+        <div class="card-body">
+            <form class="" [formGroup] = "signinForm" (ngSubmit)="onSubmit()">
+              <div class="form-group">
+                <label for="email">Email:
+                  <input type="email" name="email"  class="form-control" value="" formControlName="email">
+                </label>
+              </div>
+          
+          
+              <div class="form-group">
+                <label for="password">Password:
+                  <input type="password" name="password" value=""  class="form-control" formControlName="password">
+                </label>
+              </div>
+          
+              <div class="form-group">
+                <label for="userType">User Type:
+                  <select class="form-control" formControlName="userType">
+                    <option value="Artist">Artist</option>
+                    <option value="Customer" [selected]="true">Customer</option>
+                  </select>
+                </label>
+              </div>
+          
+              <button type="submit"  class = "btn btn-success btn-flat m-b-30 m-t-30" name="button">Login</button>
+            </form>
+          </div>
     </div>
-
-
-    <div class="form-group">
-      <label for="password">Password:
-        <input type="password" name="password" value=""  class="form-control" formControlName="password">
-      </label>
-    </div>
-
-    <div class="form-group">
-      <label for="userType">User Type:
-        <select class="form-control" formControlName="userType">
-          <option value="Artist">Artist</option>
-          <option value="Customer" [selected]="true">Customer</option>
-        </select>
-      </label>
-    </div>
-
-    <button type="submit"  class = "btn btn-submit" name="button">Login</button>
-  </form>
 </div>
