--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,6 +29,9 @@
     <div class="navbar navbar-nav navbar-right">
       <ul class="navbar-nav mr-auto" >
           <li class="nav-item">
+              <a class="nav-link" routerLink="/upload-product"><span class=""></span> Upload Product</a>
+          </li>
+          <li class="nav-item">
               <a class="nav-link" routerLink="/login"><span class="fa fa-sign-in"></span> Login</a>
           </li>
           <li class="nav-item">
