--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -2,13 +2,12 @@
   <div class="row jumbotron">
 
     <div class="card col-md-4" style="width:400px;" *ngFor="let artist of artists">
-      <img class="card-img-top" [src]="artist.profilepic" width="300" height="200" alt="profile picture">
+      <img class="card-img-top" [src]="artist.profile.profilepic" width="300" height="200" alt="profile picture">
       <div class="card-body">
         <h4 class="card-title">{{ artist.fullName }}</h4>
-        <p class="card-text">Street Name: {{ artist.streetName }}</p>
-        <p class="card-text">Expert: {{ artist.expert }}</p>
-        <p class="card-text">Role: {{ artist.role }}</p>
         <p class="card-text">Email: {{ artist.email }}</p>
+        <p class="card-text">Expert: {{ artist.profile.expert }}</p>
+        <p class="card-text">Role: {{ artist.profile.role }}</p>
         <p class="card-text">Phone Number: {{ artist.phone }}</p>
 
         <div>
@@ -19,7 +18,7 @@
           <div class="modal fade" id="Bio{{artist.id}}">
             <div class="modal-dialog">
               <div class="modal-content">
-                <p>{{ artist.bio }}</p>
+                <p>{{ artist.profile.bio }}</p>
               </div>
             </div>
           </div>
@@ -33,7 +32,7 @@
           <div class="modal fade" id="myModalCV{{artist.id}}">
             <div class="modal-dialog">
               <div class="modal-content">
-                <embed [src]="artist.CV | safe" width="800" height="900" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html" />
+                <embed [src]="artist.profile.CV | safe" width="800" height="900" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html" />
               </div>
             </div>
           </div>
@@ -47,7 +46,7 @@
           <div class="modal fade" id="myModal{{artist.id}}">
             <div class="modal-dialog">
               <div class="modal-content">
-                <img [src]="artist.samplepic" width="800" height="800" alt="">
+                <img [src]="artist.profile.samplepic" width="800" height="800" alt="">
               </div>
             </div>
           </div>
