--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -1,3 +1,34 @@
-<div class="container" style="background-color: white;">
+<div class="container">
+    <div class="row">
+      <div class="card col-md-4" style="width:400px;" *ngFor="let product of products">
+        <img class="card-img-top" [src]="product.image" width="300" height="300" alt="product image">
+        <div class="card-body">
+          <h4 class="card-title">Name: {{ product.Name }}</h4>
+          <p class="card-text">Availability: {{ product.availability }}</p>
   
-</div>
+          <div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" [attr.data-target]="'#' + product.id">
+              View More
+            </button>
+  
+            <div class="modal fade" id="{{product.id}}">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <p>bla bla bla</p>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+            <div>
+              <button (click)="verifyProduct(product.id)" class="btn btn-success">Verify</button>
+              <button (click)="rejectProduct(product.id)" class="btn btn-danger">Reject</button>
+            </div>
+  
+  
+        </div>
+      </div>
+
+      
+    </div>
+  
