--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -53,7 +53,7 @@
 
           <div>
             <button (click)="verifyArtist(artist)" class="btn btn-success">Verify</button>
-            <button (click)="rejectArtist(artist)" class="btn btn-danger">Reject</button>
+            <button (click)="open(content); setRejectArtist(artist)" class="btn btn-danger">Reject</button>
 
           </div>
         </div>
@@ -64,3 +64,24 @@
     </div>
 
   </div>
+
+
+  <ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Comment:</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group">
+          <textarea class="form-control" rows="5" id="comment" #comment></textarea>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark"  [disabled]= "comment.value.length == 0" (click)="modal.close('Save click'); rejectArtist(comment.value);">Send</button>
+    </div>
+  </ng-template>
+  
