--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -22,13 +22,31 @@
   
             <div>
               <button (click)="verifyProduct(product.id)" class="btn btn-success">Verify</button>
-              <button (click)="rejectProduct(product.id)" class="btn btn-danger">Reject</button>
+              <button (click)="setRejectProductId(product.id); open(content);" class="btn btn-danger">Reject</button>
             </div>
-  
-  
         </div>
-      </div>
-
-      
+      </div>     
     </div>
+
+
+
+    <ng-template #content let-modal>
+      <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Comment:</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <textarea class="form-control" rows="5" id="comment" #comment></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" [disabled]= "comment.value.length == 0" (click)="modal.close('Save click'); rejectProduct(comment.value);">Send</button>
+      </div>
+    </ng-template>
+    
   
