--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
   <div class="container">
     <a class="navbar-brand" href="#"><img src="./assets/images/brand/opus.jpg"  style="width:145px; height:59px; overflow: hidden !important;"class="logo" alt="Opus "></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,8 +13,23 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Customized Arts</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Categories</a>
+        <li class="nav-item dropdown megamenu-fw">
+          <a class="nav-link dropdown-toggle"  data-toggle="dropdown" href="#">Categories</a>
+          <ul class="dropdown-menu megamenu-content" role="menu">
+            <li>
+              <div class="row">
+                <div class="col-menu col-md-3" *ngFor = "let ls of List" >
+                  <a href="#"  class="title"><h4 style="color:black">{{ls.category}}</h4></a>
+                  <div class="content">
+                      <ul class="menu-col" *ngFor = "let l of ls.subcategories">
+                          <li><a href="#">{{l}}</a></li>
+                           
+                      </ul>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Featured Artists</a>
