--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -22,7 +22,7 @@
   
             <div>
               <button (click)="verifyProduct(product.id)" class="btn btn-success">Verify</button>
-              <button (click)="setRejectProductId(product.id); open(content);" class="btn btn-danger">Reject</button>
+              <button (click)="setRejectIds(product.id, product.user.id); open(content);" class="btn btn-danger">Reject</button>
             </div>
         </div>
       </div>     
