code for rejecting product and artist

--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -53,7 +53,7 @@
 
           <div>
             <button (click)="verifyArtist(artist)" class="btn btn-success">Verify</button>
-            <button (click)="open(content); setRejectArtist(artist)" class="btn btn-danger">Reject</button>
+            <button (click)="open(content); setRejectArtistId(artist.id)" class="btn btn-danger">Reject</button>
 
           </div>
         </div>
