home-page changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         </li>
         <li class="nav-item dropdown megamenu-fw">
           <a class="nav-link dropdown-toggle"  data-toggle="dropdown" href="#">Categories</a>
-          <ul class="dropdown-menu megamenu-content" role="menu">
+          <ul class="dropdown-menu megamenu-content animated" role="menu">
             <li>
               <div class="row">
                 <div class="col-menu col-md-3" *ngFor = "let ls of List" >
