--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
               <a class="nav-link" *ngIf="!isLoggedIn" routerLink="/signup">Sign Up</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" *ngIf="isLoggedIn" routerLink="/profile-page">Profile</a>
+          </li>
            <li class="nav-item">
              <a class = "nav-link" href="#"><span class="fa fa-cart-plus"></span>Cart</a>
             </li>
