--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -70,7 +70,7 @@
         <div class="headline" *ngIf="product.subcategoryProducts.length > 0">
             <h3>Featured   <b> {{product.subcategory}} </b> Arts </h3>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="product.subcategoryProducts.length > 0">
             <div class="col-md-3 col-sm-6" *ngFor = "let prod of product.subcategoryProducts; let i=index">
               <div *ngIf="i < 4">
                   <div class="product-page-single">
