--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -1,14 +1,17 @@
-<nav id="sidebar">
-  <div class="sidebar-header">
-    <h3>OPUS</h3>
-  </div>
 
-  <ul class="list-unstyled components">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/admin/verifyaccount" routerLinkActive="active">Verify Account</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/admin/verifyimage" routerLinkActive="active">Verify Image</a>
-    </li>
-  </ul>
-</nav>
+<nav class="menu" tabindex="0" style="margin-top: 50px; height:100%; min-height:600px; overflow:hidden">
+    <div class="smartphone-menu-trigger"></div>
+    <header class="avatar">
+      
+      <h2>Dashboard</h2>
+    </header>
+    <ul>
+      <li tabindex="0" class="icon-users"> <a class="nav-link" routerLink="/admin/verifyaccount" routerLinkActive="active">Verify Account</a></li>
+      <li tabindex="0" class="icon-customers"> <a class="nav-link" routerLink="/admin/verifyimage" routerLinkActive="active">Verify Image</a></li>
+
+    </ul>
+  </nav>
+
+
+
+
